--- a/contact-us-page/src/App.css
+++ b/contact-us-page/src/App.css
@@ -3,7 +3,12 @@
 }
 
 .container{
-    max-width: 1200px;
+    max-width: 1280px;
     margin: 0 auto;
+}
+.main_container{
+    display: flex;
+    height: calc(100vh-72px);
+    flex-direction: column;
 }
 
